# openshift-rag

./: .dockerignore  .gitignore  CI_CD_GUIDE.md  CLAUDE.md  Dockerfile  KUBEVIRT_FEATURE.md  README.md  TESTING.md  docker-compose.yml  entrypoint.sh  interview.txt  prd.md  pyproject.toml  wsgi.py
.github/workflows/: ci.yml
data/: skipped.jsonl
data/eval_results/: EVAL_COMMANDS.md  baseline.json  baseline_hybrid.json
data/ground_truth/: queries.json
data/processed/: about-crio.md  about-etcd-encryption.md  about-installing-oadp-on-multiple-namespaces.md  about-manually-maintained-credentials-upgrade.md  about-oadp-update-channels.md  about-project-creation.md  about-updates.md  access-cluster.md  accessing-an-example-cluster-node-tuning-operator-specification.md  accessing-running-pods.md  accessing-windows-node-using-rdp.md  accessing-windows-node-using-ssh.md  accessing-windows-node.md  adding-node-iso-flags.md  adding-node-iso-yaml.md  adding-to-a-project.md  admission-plug-ins-about.md  admission-webhook-types.md  admission-webhooks-about.md  ai-adding-worker-nodes-to-cluster.md  ai-authenticating-against-ai-rest-api.md  application-health-about.md  application-health-configuring.md  applications-create-using-cli-image.md  applications-create-using-cli-modify.md  applications-create-using-cli-source-code.md  applications-create-using-cli-template.md  arch-olm-operators.md  (+1533 more)
k8s/: deployment.yaml  nginx-configmap.yaml  pvc.yaml  secret.yaml  service.yaml
tests/: test_api.py  test_attributes.py  test_collect_so.py  test_hybrid_retrieval.py  test_preprocess.py
(+220 files in other folders)
